Add a total meal info section, with a pie chart and a list of the nutritional values

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <div class="calculator">
             <div class="total">
                 <h2>Your Meal</h2>
+                <div class="pie-chart"></div>
+                <h4>Total calories: 1000 cal</h4>
+                <ul id="total-info" class="total-list">
+                    <li class="protein">Protein - <span id="protein-cal">300 cal</span> - <span id="protein-percent"> 30%</span></li>
+                    <li class="carbs">Carbs - <span id="carbs-cal">450 cal</span> - <span id="carbs-percent"> 45%</span></li>
+                    <li class="fat">Fat - <span id="fat-cal">250 cal</span> - <span id="fat-percent"> 25%</span></li>
+                </ul>
             </div>
             <div class="ingredients">
                 <h2>List of ingredients</h2>
