--- a/index.html
+++ b/index.html
@@ -7,50 +7,56 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <div>
-            <h1 class="logo">  <span>Cal<i title="logo" style="--size: 4rem"></i>r</span>Calc</h1>
+        <header>
+            <h1 class="logo blue"><span class="logo green">Cal<i title="logo"></i>r</span>Calc</h1>
             <p> Add your ingredients to calculate your total meal nutritional values:</p>
-        </div>
-        <div class="calculator">
-            <div class="total">
+        </header>
+        <div class="flexed">
+            <section>
                 <h2>Your Meal</h2>
                 <div class="pie-chart"></div>
-                <h4>Total calories: 1000 cal</h4>
-                <ul id="total-info" class="total-list">
-                    <li class="protein">Protein - <span id="protein-cal">300 cal</span> - <span id="protein-percent"> 30%</span></li>
-                    <li class="carbs">Carbs - <span id="carbs-cal">450 cal</span> - <span id="carbs-percent"> 45%</span></li>
-                    <li class="fat">Fat - <span id="fat-cal">250 cal</span> - <span id="fat-percent"> 25%</span></li>
-                </ul>
-            </div>
-            <div class="ingredients">
+                <h4>Total calories: <span id="total-cal">1000</span><sub>cal/100g</sub></h4>
+                <hr/>
+                <div class="flexed">
+                    <i id="protein-%" class="bullet flexed protein">30%</i> 
+                    <p>Protein (<span id="total-protein">40</span><sub>g</sub>)</p>
+                    <i id="carbs-%" class="bullet flexed carbs">45%</i> 
+                    <p>Carbs (<span id="total-carbs">50</span><sub>g</sub>)</p>
+                    <i id="fat-%" class="bullet flexed fat">25%</i> 
+                    <p>Fat (<span id="total-fat">10</span><sub>g</sub>)</p>
+                </div>
+            </section>
+            <section>
                 <h2>List of ingredients</h2>
                 <ul>
-                    <li class="ingredient-item">
+                    <li class="ingredient flexed">
                         <header>
-                            <h5>Product name</h5>
-						    <div>
-                                <i title="edit"></i>
-						        <i title="delete"></i>
-                            </div>
+                            Product name
+                            <hr/>
+                            <small>Total: 500g | Protein: 40g | Carbs: 40g | Fat: 40g</small>
                         </header>
-                        <small>Total: 500g | Protein: 40g | Carbs: 40g | Fat: 40g</small>
+						<nav>
+                            <i title="edit"></i>
+						    <i title="delete"></i>
+                        </nav>
                     </li>
-                    <li class="ingredient-item">
+                    <li class="ingredient flexed">
                         <header>
-                            <h5>Product name</h5>
-						    <div>
-                                <i title="edit"></i>
-						        <i title="delete"></i>
-                            </div>
+                            Product name
+                            <hr/>
+                            <small>Total: 500g | Protein: 40g | Carbs: 40g | Fat: 40g</small>
                         </header>
-                        <small>Total: 500g | Protein: 40g | Carbs: 40g | Fat: 40g</small>
+						<nav>
+                            <i title="edit"></i>
+						    <i title="delete"></i>
+                        </nav>
                     </li>
                 </ul>
-                <p id="empy-list-message" style="display: none">
+                <p id="empy-list-message">
                     Oh, you have no ingredients in your list!<br/> 
                     Add some products to calculate :)
-                </p><i title="add" style="--size: 32px"></i> 
-            </div>
+                </p><i title="add" style="--icon-size: 32px"></i> 
+            </section>
         </div>
     </body>
 </html>
